fix(deploy): Fix GitHub automatic deployment